# Worker-Cli

./: Cargo.toml  Dockerfile  README.md  chuck.norris.test.json  config.yaml  docker-compose.yml  json_placeholder.test.json  test.json  to_do.test.json  via_cep.test.json
src/: dsl.rs  executor.rs  http_engine.rs  main.rs
src/client/: mod.rs
src/executor/: executor_service.rs  mod.rs
src/models/: dsl_model.rs  metrics.rs  mod.rs
src/ui/: loader.rs
