[package]
name = "Worker-Base"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper-tls = "0.5"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
url = "2.5.4"
